--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
     <main>
         <div class=" bright-orange">
-            <img src="./Html-layout/icon-sedans.svg"/>
+            <img src="./Assets/icon-sedans.svg"/>
             <h1>SEDANS</h1>
             <P>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
             </P>
             <button class="fontorange">Learn More</button>
         </div>
         <div class="cyan">
-            <img src="./Html-layout/icon-suvs.svg"/>
+            <img src="./Assets/icon-suvs.svg"/>
             <h1>SUVS</h1>
             <P>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures
             </P>
             <button class="fontcyan">Learn More</button>
         </div>
         <div class="dark-cyan">
-            <img src="./Html-layout/icon-luxury.svg"/>
+            <img src="./Assets/icon-luxury.svg"/>
             <h1>LUXURY</h1>
             <P>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrice in style.
             </P>
